# ZKredit

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  skills-lock.json
.github/workflows/: ci.yml  prover-image.yml  refresh-sweep.yml
api/: __init__.py  auth.py  contract_stub.py  deps.py  main.py  proving_jobs.py  rate_limit.py  schemas.py  validation.py
api/identity/: __init__.py  store.py
api/kyc/: __init__.py  didit.py  provider.py  service.py  store.py
api/routes/: __init__.py  identity.py  kyc.py  v1.py
api/services/: __init__.py  group_rescore.py  refresh_sweep.py
api/static/: index.html
api/tests/: conftest.py  test_auth.py  test_contract.py  test_cors.py  test_group_refresh.py  test_identity.py  test_kyc.py  test_migrations.py  test_phase4.py  test_rate_limit.py  test_routes.py
contracts/: Cargo.toml
contracts/attestor-registry/: Cargo.toml
contracts/attestor-registry/src/: lib.rs
contracts/bindings/python/: pyproject.toml
contracts/bindings/python/zkredit_contracts/: __init__.py  submit_attestation.py
contracts/bindings/ts/attestor-registry/: README.md  package.json
contracts/bindings/ts/attestor-registry/src/: index.ts
contracts/bindings/ts/mock-lending-pool/: README.md  package.json
contracts/bindings/ts/mock-lending-pool/src/: index.ts
contracts/bindings/ts/risk-attestation/: README.md  package.json
contracts/bindings/ts/risk-attestation/src/: index.ts
contracts/bindings/ts/wallet-identity/: README.md  package.json
contracts/bindings/ts/wallet-identity/src/: index.ts
contracts/e2e-tests/: Cargo.toml
contracts/e2e-tests/src/: lib.rs
contracts/e2e-tests/tests/: multiwallet.rs  proof_gated.rs  risc0_attest.rs
contracts/mock-lending-pool/: Cargo.toml
contracts/mock-lending-pool/src/: lib.rs
contracts/risk-attestation/: Cargo.toml
contracts/risk-attestation/src/: groth16.rs  lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: groth16.rs  lib.rs  risc0.rs
contracts/wallet-identity/: Cargo.toml
contracts/wallet-identity/src/: lib.rs
deploy/: fly-secrets.sh
docs/: architecture.excalidraw  architecture.md  attestor-pipeline.md  demo-guide.md  demo.md  e2e-bento-rebuild-runbook.md  explaination.md  fly-job-route-handoff.md  handoff-execution-plan-2026-07-09.md  handoff-ishita-backend-routes-2026-07-09.md  handoff-ishita-cosign-attestation.md  handoff-ishita-risc0.md  handoff-ishita-runpod-prover-2026-07-09.md  handoff-soham-prod-proving.md  handoff-soham-tailscale-fly-proving.md  live-testnet-e2e.md  project-deep-dive.md  proving-infrastructure-findings.md  remaining-work-audit.md  soham-risc0-handoff-2026-07-02.md  v2_plan.md  video-script.md  web3-stellar-zero-to-hero.md
docs-site/: index.html  package-lock.json  package.json  tailwind.config.js
docs-site/src/: App.tsx  index.css
docs-site/src/components/: DocsBackground.tsx  Header.tsx  Icons.tsx  Markdown.tsx  Mermaid.tsx  MermaidImpl.tsx  PageNav.tsx  Sidebar.tsx  TableOfContents.tsx
docs-site/src/lib/: nav.ts  site.ts
docs-site/src/pages/: DocPage.tsx
docs/adr/: 0001-risc0-zkml-pipeline.md
docs/standups/: 2026-06-27-soham.md  2026-06-30-soham.md  2026-07-01-soham.md  2026-07-02-ishita.md  2026-07-02-soham.md  2026-07-03-ishita.md  2026-07-03-soham.md  2026-07-04-soham.md  2026-07-05-soham.md  2026-07-07-ishita.md  2026-07-08-ishita.md  soham-day3-day4-todos.md
frontend/: .env.example  .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.eslint.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/public/: site.webmanifest
frontend/public/zk/: identity.wasm  identity.zkey
frontend/scripts/: cosign-attest.mjs
frontend/src/: App.tsx  index.css  main.tsx  snarkjs.d.ts
frontend/src/components/: Badges.tsx  Catchphrase.tsx  ErrorBoundary.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  HowVisuals.tsx  Icons.tsx  Layout.tsx  Nav.tsx  OnChainAttest.test.tsx  OnChainAttest.tsx  PageGlow.tsx  Placeholder.tsx  TryAttestation.tsx  UseCases.tsx  WhatWeDo.tsx  WhatsProven.tsx
frontend/src/lib/: api.ts  attestor.test.ts  attestor.ts  freighter.ts  identity.test.ts  identity.ts  kyc.test.ts  kyc.ts  motion.ts  navigation.ts
frontend/src/pages/: AttestationPage.tsx  Home.tsx  Identity.tsx  LandingPage.tsx  Lending.tsx  Wallet.tsx
infra/: attestor_service.py  docker-compose.yml
infra/scripts/: deploy-mainnet.sh  deploy-testnet.sh
migrations/: env.py
migrations/versions/: 9a86bb72579f_baseline_schema_accounts_operations_.py  b2f7c9a41d08_proving_jobs.py  c3a1e5d92f14_kyc_verifications.py  d4b2e7c81a05_group_memberships.py
ml/: __init__.py  attest.py  config.py  types.py
ml/data/: __init__.py  db.py  models.py  population.py  stellar_ingest.py
ml/features/: __init__.py  base.py  population_v1.py  store.py
ml/models/: __init__.py  credit_score.py  distill.py  distilled.py  full.py  registry.py  risc0_export.py  train.py
ml/risc0/: README.md  bento_node.py  prover.py  runpod_prover.py
ml/risc0/host/: Cargo.toml
ml/risc0/host/src/: lib.rs  main.rs
ml/risc0/methods/: Cargo.toml
ml/risc0/model/: Cargo.toml  build.rs  risc0_distilled_model.json
ml/risc0/model/src/: lib.rs
ml/risc0/params-dump/: Cargo.toml
ml/risc0/params-dump/src/: main.rs
ml/tests/: test_credit_score.py  test_distilled.py  test_group_attest.py  test_population_csv.py  test_risc0_export.py  test_risc0_prover.py  test_train_pipeline.py  test_unsupervised_full_model.py
ml/zk/: __init__.py  ezkl_pipeline.py  proof_benchmark.py  prove_cli.py
model_store/: distilled.joblib  distilled_meta.json  full.onnx  registry.json  risc0_distilled_model.metrics.json
model_store/zk/: calibration.json  distilled.onnx  proof.json  prove_input.json  prove_witness.json  settings.json  setup_witness.json  vk.key
scripts/: bootstrap_demo_model.py  check_risc0_parity.py  check_risc0_threshold_parity.py  export_risc0_model.py  run_api_local.sh
(+50 files in other folders)
