[workspace]
members = [
    "shared",
    "risk-attestation",
    "attestor-registry",
    "mock-lending-pool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZKredit Contributors"]
license = "Apache-2.0"
repository = "https://github.com/blank-code/zkredit"
rust-version = "1.84.0"

[workspace.dependencies]
soroban-sdk = { version = "25.3.1" }
