[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zkredit-contracts"
version = "0.1.0"
description = "Python helpers for ZKredit Soroban contracts"
requires-python = ">=3.11"
dependencies = [
    "stellar-sdk>=12.0,<13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zkredit_contracts*"]
