[package]
name = "zkredit-risc0-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
risc0-zkvm = "3.0"
zkredit-risc0-methods = { path = "../methods" }
zkredit-risk-model = { path = "../model" }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
hex = "0.4"
serde_json = "1"

[features]
# Enable NVIDIA GPU proving. The RunPod worker image builds with `-F cuda` so
# `default_prover()` proves on the worker's GPU (native Groth16). Off by default
# so local/CI builds don't require the CUDA toolkit.
cuda = ["risc0-zkvm/cuda"]
